--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Communitybanlist",
   "version": "1.0.0",
-  "repository": "https://github.com/Communitybanlist/Communitybanlist.git",
-  "author": "Community Ban List <https://github.com/Communitybanlist>",
+  "repository": "https://github.com/community-ban-list/Communitybanlist.git",
+  "author": "Community Ban List <https://github.com/community-ban-list",
   "license": "MIT",
   "private": true,
   "workspaces": [
