--- a/web-server/Dockerfile
+++ b/web-server/Dockerfile
@@ -14,6 +14,8 @@ COPY package.json .
 
 # Install dependencies
 RUN yarn install --production
+
+# Install pm2
 RUN yarn global add pm2
 
 # Build client
