--- a/ban-importer/package.json
+++ b/ban-importer/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "async": "^3.2.0",
     "axios": "^1.4.0",
-    "scbl-lib": "1.0.0"
+    "scbl-lib": "1.0.0",
+    "node-abort-controller": "^3.1.1"
   }
 }
