--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,21 +8,11 @@ on:
 
 jobs:
 
-  build:
+  Build-and-Push:
 
     runs-on: linux-1
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image for the web server
-      run: docker build . --file web-server/Dockerfile --tag cblwebserver:$(date +%s)
-
-    - name: Build the Docker image for the ban importer
-      run: docker build . --file ban-importer/Dockerfile --tag cblbanimporter:$(date +%s)
-
-    - name: Clean up Docker Images not in use
-      run: docker system prune --all --force
-
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -46,3 +36,11 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblimporter:latest
     - name: Clean up Docker Images not in use repeat step
       run: docker system prune --all --force
+  
+  Cleanup:
+
+     runs-on: linux-1
+
+     steps:
+     - name: Clean up Docker Images not in use
+       run: docker system prune --all --force  
