--- a/web-server/Dockerfile
+++ b/web-server/Dockerfile
@@ -26,4 +26,4 @@ RUN yarn build-web-server
 EXPOSE 80
 
 # Run service
-CMD [ "pm2-runtime", "web-server/index.js", ]
+CMD [ "pm2-runtime", "web-server/index.js" ]
