--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "start-web-server": "cross-env NODE_ENV=production node web-server/index.js",
     "dev-web-server": "concurrently \"nodemon --ignore './client/' web-server/index.js\" \"cd client && npm run start\""
   },
+  "resolutions": {
+    "@babel/core": "7.25.2"
+  },
   "devDependencies": {
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.2",
@@ -32,12 +35,13 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "nodemon": "^2.0.4",
+    "npm-force-resolutions": "^0.0.10",
     "prettier": "^2.0.5"
   },
   "dependencies": {
-    "react-step-wizard": "^5.3.5",
-    "simple-discord-webhooks": "^2.1.0",
     "@pm2/io": "^5.0.0",
-    "pm2": "^5.1.0"
+    "pm2": "^5.1.0",
+    "react-step-wizard": "^5.3.5",
+    "simple-discord-webhooks": "^2.1.0"
   }
 }
