--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "start-ban-importer": "node ban-importer/index.js",
     "build-web-server": "cd client && npm run build",
     "start-web-server": "cross-env NODE_ENV=production node web-server/index.js",
-    "dev-web-server": "concurrently \"nodemon --ignore './client/' web-server/index.js\" \"cd client && npm run start\""
+    "dev-web-server": "conc \"nodemon --ignore './client/' web-server/index.js\" \"cd client && npm run start\"",
+    "docker-build-web-server": "docker build -f ./web-server/Dockerfile . -t cblweb-dev",
+    "docker-build-ban-importer": "docker build -f ./ban-importer/Dockerfile . -t cblimporter-dev",
+    "prod-test": "conc \"yarn docker-build-web-server\" \"yarn docker-build-ban-importer\""
   },
   "resolutions": {
-    "@babel/core": "7.25.2"
+    "@babel/core": "^7.25.2"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0",
+    "concurrently": "^8.2.2",
     "cross-env": "^7.0.2",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.11.0",
@@ -35,7 +38,6 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "nodemon": "^2.0.4",
-    "npm-force-resolutions": "^0.0.10",
     "prettier": "^2.0.5"
   },
   "dependencies": {
