--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,6 +31,9 @@ jobs:
           file: web-server/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblwebserver:latest
+    - name: Update Web Server Deployment
+      continue-on-error: true
+      run: cd /opt/Communitybanlist && sh startweb.sh
     - name: Build and push image for the ban importer
       uses: docker/build-push-action@v5
       with:
