--- a/.github/workflows/docker-image-dev.yml
+++ b/.github/workflows/docker-image-dev.yml
@@ -1,7 +1,7 @@
-name: Docker Image CI
+name: Docker Image CI Dev Mode
 
 on:
-  push:
+  pull_request:
     branches: [ "master" ]
 
 jobs:
@@ -29,9 +29,6 @@ jobs:
           file: web-server/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblwebserver:latest
-    - name: Update Web Server Deployment
-      continue-on-error: true
-      run: cd /opt/Communitybanlist && sh webstart-fromgit.sh
     - name: Build and push image for the ban importer
       uses: docker/build-push-action@v5
       with:
