--- a/.github/workflows/docker-image-dev.yml
+++ b/.github/workflows/docker-image-dev.yml
@@ -26,14 +26,14 @@ jobs:
       uses: docker/setup-qemu-action@v3 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    - name: Build and push image for the web server
+    - name: Build and push image for the web server on dev mode
       uses: docker/build-push-action@v5
       with:
           context: .
           file: web-server/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblwebserver-dev:latest
-    - name: Build and push image for the ban importer
+    - name: Build and push image for the ban importer on dev mode
       uses: docker/build-push-action@v5
       with:
           context: .
