--- a/.github/workflows/docker-image-dev.yml
+++ b/.github/workflows/docker-image-dev.yml
@@ -1,12 +1,12 @@
-name: Docker Image CI Dev Mode
+name: Docker Image Dev CI
 
 concurrency:
   group: "build"
   cancel-in-progress: false
 
 on:
-  pull_request:
-    branches: [ "master" ]
+  push:
+    branches: [ "dev" ]
 
 jobs:
 
@@ -17,26 +17,68 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3 
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    - name: Build and push image for the web server on dev mode
+
+    - name: Build Docker image for the web server
+      uses: docker/build-push-action@v5
+      with:
+          context: .
+          file: web-server/Dockerfile
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblwebserver:dev
+
+    - name: Build Docker image for the ban importer
+      uses: docker/build-push-action@v5
+      with:
+          context: .
+          file: ban-importer/Dockerfile
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblimporter:dev
+
+    - name: Scan Docker image for vulnerabilities (web server)
+      uses: aquasecurity/trivy-action@v0.4.0
+      with:
+          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/cblwebserver:dev
+          severity: HIGH,CRITICAL
+          ignore-unfixed: true
+
+    - name: Scan Docker image for vulnerabilities (ban importer)
+      uses: aquasecurity/trivy-action@v0.4.0
+      with:
+          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/cblimporter:dev
+          severity: HIGH,CRITICAL
+          ignore-unfixed: true
+
+    - name: Build and push image for the web server
+      if: success()
       uses: docker/build-push-action@v5
       with:
           context: .
           file: web-server/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblwebserver:dev
-    - name: Build and push image for the ban importer on dev mode
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblwebserver:dev-latest
+
+    - name: Update Web Server Deployment
+      if: success()
+      continue-on-error: true
+      run: cd /opt/Communitybanlist && sh webstart-fromgit.sh
+
+    - name: Build and push image for the ban importer
+      if: success()
       uses: docker/build-push-action@v5
       with:
           context: .
           file: ban-importer/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblimporter:dev
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblimporter:dev-latest
+
+
