--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,29 +17,67 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3 
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+
+    - name: Build Docker image for the web server
+      uses: docker/build-push-action@v5
+      with:
+          context: .
+          file: web-server/Dockerfile
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblwebserver:test
+
+    - name: Build Docker image for the ban importer
+      uses: docker/build-push-action@v5
+      with:
+          context: .
+          file: ban-importer/Dockerfile
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblimporter:test
+
+    - name: Scan Docker image for vulnerabilities (web server)
+      uses: aquasecurity/trivy-action@v0.4.0
+      with:
+          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/cblwebserver:test
+          severity: HIGH,CRITICAL
+          ignore-unfixed: true
+
+    - name: Scan Docker image for vulnerabilities (ban importer)
+      uses: aquasecurity/trivy-action@v0.4.0
+      with:
+          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/cblimporter:test
+          severity: HIGH,CRITICAL
+          ignore-unfixed: true
+
     - name: Build and push image for the web server
+      if: success()
       uses: docker/build-push-action@v5
       with:
           context: .
           file: web-server/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblwebserver:latest
+
     - name: Update Web Server Deployment
+      if: success()
       continue-on-error: true
       run: cd /opt/Communitybanlist && sh webstart-fromgit.sh
+
     - name: Build and push image for the ban importer
+      if: success()
       uses: docker/build-push-action@v5
       with:
           context: .
           file: ban-importer/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblimporter:latest
+
