--- a/web-server/Dockerfile
+++ b/web-server/Dockerfile
@@ -40,7 +40,7 @@ EXPOSE 80
 
 # Add health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost:80/health || exit 1
+  CMD curl -f http://localhost:80/health-check || exit 1
 
 # Run service with pm2
 CMD [ "pm2-runtime", "web-server/index.js" ]
