--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,24 +30,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3.8.0
 
-    - name: Build Docker image for the web server
-      uses: docker/build-push-action@v6.11.0
-      with:
-          context: .
-          file: web-server/Dockerfile
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblwebserver:test
-          provenance: true
-
-    - name: Build Docker image for the ban importer
-      uses: docker/build-push-action@v6.11.0
-      with:
-          context: .
-          file: ban-importer/Dockerfile
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblimporter:test
-          provenance: true
-
-    - name: Build and push image for the web server
-      if: success()
+    - name: Build and push Docker image for the web server
       uses: docker/build-push-action@v6.11.0
       with:
           context: .
@@ -61,8 +44,7 @@ jobs:
       continue-on-error: true
       run: cd /opt/Communitybanlist && sh webstart-fromgit.sh
 
-    - name: Build and push image for the ban importer
-      if: success()
+    - name: Build and push Docker image for the ban importer
       uses: docker/build-push-action@v6.11.0
       with:
           context: .
