--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,10 +39,10 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/cblwebserver:latest
           provenance: true
 
-#    - name: Update Web Server Deployment
-#      if: success()
-#      continue-on-error: true
-#      run: cd /opt/Communitybanlist && sh webstart-fromgit.sh
+    - name: Update Web Server Deployment
+      if: success()
+      continue-on-error: true
+      run: ${{ WEB_SERVER_LAUNCH }}
 
     - name: Build and push Docker image for the ban importer
       uses: docker/build-push-action@v6.11.0
